--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.10.0",
+    "@stripe/stripe-js": "^1.35.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "compression": "^1.7.3",
@@ -29,7 +31,7 @@
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
-    "stripe": "^10.0.0"
+    "stripe": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
