--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "lorem-ipsum": "^2.0.8",
     "morgan": "^1.9.1",
+    "nodemon": "^1.19.4",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
     "stripe": "^10.0.0"
