--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "lorem-ipsum": "^2.0.8",
+    "main": "index.js",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
     "pg": "^8.5.1",
