--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "webpack",
     "build:dev": "npm run build -- --watch --mode=development",
     "seed": "node script/seed.js",
-    "start": "echo 'Running server for production - developers, use npm run start:dev for development' && node main",
+    "start": "echo 'Running server for production - developers, use npm run start:dev for development'",
     "start:dev": "npm run build:dev & npm run start-server",
     "start:dev:logger": "LOGGING=true npm run start:dev",
     "start:dev:seed": "SEED=true npm run start:dev",
@@ -31,7 +31,6 @@
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "lorem-ipsum": "^2.0.8",
-    "main": "index.js",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
     "pg": "^8.5.1",
